--- a/WebApp_Day2/Views/Shared/_Layout.cshtml
+++ b/WebApp_Day2/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/course/index">Courses</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="SameRequest" asp-action="Index">Same Request</a>
+                        </li>
                     </ul>
                 </div>
             </div>
