--- a/WebApp_Day2/Views/_ViewImports.cshtml
+++ b/WebApp_Day2/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using WebApp_Day2
 @using WebApp_Day2.Models
+@using WebApp_Day2.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
