--- a/WebApp_Day2/Views/Student/Index.cshtml
+++ b/WebApp_Day2/Views/Student/Index.cshtml
@@ -6,6 +6,7 @@
 
 <h1>Students Data</h1>
 <a href="/student/add" class="btn btn-warning">Add new student</a>
+<a href="/Validation/AddStudent" class="btn btn-warning">Add new student VM</a>
 <hr />
 <table class="table table-warning table-striped">
     <thead>
