--- a/WebApp_Day2/Views/Shared/AddStudent.cshtml
+++ b/WebApp_Day2/Views/Shared/AddStudent.cshtml
@@ -6,7 +6,7 @@
 <h1>Add Student</h1>
 
 
-<form action="/Validation/AddStudent" method="post">
+<form method="post">
     <div class="mb-3">
         <label asp-for="Name" class="form-label"></label>
         <input class="form-control" asp-for="Name">
@@ -46,3 +46,9 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+
+@section Scripts{
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
