--- a/WebApp_Day2/Views/Student/Index.cshtml
+++ b/WebApp_Day2/Views/Student/Index.cshtml
@@ -4,6 +4,7 @@
     int index = 1;
 }
 
+<div class="alert alert-success">@TempData["Saved"]</div>
 <h1>Students Data</h1>
 <a href="/student/add" class="btn btn-warning">Add new student</a>
 <a href="/Validation/AddStudent" class="btn btn-warning">Add new student VM</a>
